examples/test/testpolicy18716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18716
  namespace: namespace235
spec:
  podSelector:
    matchLabels:
      key4: value6
      key32: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value24
      podSelector:
        matchLabels:
          key43: value42
          key48: value20
